new_comperror.txt
ui.c: In function ‘show_tasks_table’:
ui.c:66:28: error: stray ‘\342’ in program
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                            ^
ui.c:66:29: error: stray ‘\234’ in program
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                             ^
ui.c:66:30: error: stray ‘\205’ in program
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                              ^
ui.c:66:32: error: expected expression before ‘:’ token
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                                ^
ui.c:66:34: error: stray ‘\342’ in program
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                                  ^
ui.c:66:35: error: stray ‘\235’ in program
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                                   ^
ui.c:66:36: error: stray ‘\214’ in program
   66 |     task->id, task->title, ✅ : ❌ ? task->stat == COMPLETED, task->priority, task->duedate);
      |                                    ^
make: *** [makefile:8: all] Error 1
